--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /app/cache/*
 !app/cache/.gitkeep
-#/app/config/parameters.yml
+/app/config/parameters.yml
 /app/logs/*
 !app/logs/.gitkeep
 /app/phpunit.xml
