--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -19,6 +19,6 @@ parameters:
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
 
-    paypal.express_checkout.username: sdk-three_api1.sdk.com
-    paypal.express_checkout.password: QFZCWN5HZM8VBG7Q
-    paypal.express_checkout.signature: A-IzJhZZjhg29XQ2qnhapuwxIDzyAZQ92FRP5dqBzVesOkzbdUONzmOU
+    paypal.express_checkout.username: ~
+    paypal.express_checkout.password: ~
+    paypal.express_checkout.signature: ~
